--- a/templates/form.html
+++ b/templates/form.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename = 'myScript.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename = 'myScript_test.js')}}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'box.css')}}" media="screen" />
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tabulator/3.3.1/css/tabulator.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tabulator/3.3.1/js/tabulator.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tabulator/3.5.0/css/tabulator.min.css" rel="stylesheet">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tabulator/3.5.0/js/tabulator.min.js"></script>
 
 </head>
 <body>
@@ -28,11 +28,14 @@
 
 
 <div id="show">
-    <table cellpadding="5"> <h4>Results</h4>
+    <table cellpadding="5"> <h4>Full text: </h4>
         <tr>
             <td id=full-text ></td>
         </tr>
     </table>
 </div>
+
+<div id="empty-result">No entities found in your query, please try again</div>
+
 </body>
 </html>
